e2e-tests/tests/snapshots/martin_cp__nztm2000quad_copy_summary.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: summary
---
{
  "avg_tile_size": 92.6666666666,
  "bbox": [
    -180.0,
    -85.0511287798,
    180.0,
    85.0511287798
  ],
  "file_path": "[TMP]",
  "file_size": 0,
  "max_tile_size": 118,
  "max_zoom": 2,
  "mbt_type": "Flat",
  "min_tile_size": 71,
  "min_zoom": 0,
  "page_count": 0,
  "page_size": 0,
  "tile_count": 9,
  "zoom_info": [
    {
      "avg_tile_size": 118.0,
      "bbox": [
        -180.0,
        -85.0511287798,
        180.0,
        85.0511287798
      ],
      "max_tile_size": 118,
      "min_tile_size": 118,
      "tile_count": 1,
      "zoom": 0
    },
    {
      "avg_tile_size": 89.5,
      "bbox": [
        -180.0,
        -85.0511287798,
        180.0,
        85.0511287798
      ],
      "max_tile_size": 103,
      "min_tile_size": 71,
      "tile_count": 4,
      "zoom": 1
    },
    {
      "avg_tile_size": 89.5,
      "bbox": [
        -90.0,
        -66.5132604431,
        90.0,
        66.5132604431
      ],
      "max_tile_size": 103,
      "min_tile_size": 71,
      "tile_count": 4,
      "zoom": 2
    }
  ]
}
