e2e-tests/tests/snapshots/martin_cp__only_source_metadata.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: metadata
---
agg_tiles_hash = 08934F8E3E58DED510920E1DE6F4E78F
bounds = -123.12359,-37.818085,174.763027,59.352706
center = -75.9375,38.788894,6
compression = gzip
description = Major cities from Natural Earth data
format = pbf
generator = martin cp v0.0.0
hash_algorithm = md5
json = {
  "vector_layers": [
    {
      "description": "",
      "fields": {
        "name": "String"
      },
      "id": "cities",
      "maxzoom": 6,
      "minzoom": 0
    }
  ]
}
maxzoom = 6
minzoom = 0
name = Major cities from Natural Earth data
version = 2
