e2e-tests/tests/snapshots/martin_cp__only_source_summary.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: summary
---
{
  "avg_tile_size": 202.625,
  "bbox": [
    -180.0,
    -85.0511287798,
    180.0,
    85.0511287798
  ],
  "file_path": "[TMP]",
  "file_size": 0,
  "max_tile_size": 1107,
  "max_zoom": 6,
  "mbt_type": "Flat",
  "min_tile_size": 20,
  "min_zoom": 0,
  "page_count": 0,
  "page_size": 0,
  "tile_count": 8,
  "zoom_info": [
    {
      "avg_tile_size": 1107.0,
      "bbox": [
        -180.0,
        -85.0511287798,
        180.0,
        85.0511287798
      ],
      "max_tile_size": 1107,
      "min_tile_size": 1107,
      "tile_count": 1,
      "zoom": 0
    },
    {
      "avg_tile_size": 20.0,
      "bbox": [
        -180.0,
        -85.0511287798,
        0.0,
        0.0
      ],
      "max_tile_size": 20,
      "min_tile_size": 20,
      "tile_count": 1,
      "zoom": 1
    },
    {
      "avg_tile_size": 207.0,
      "bbox": [
        90.0,
        -66.5132604431,
        180.0,
        66.5132604431
      ],
      "max_tile_size": 263,
      "min_tile_size": 151,
      "tile_count": 2,
      "zoom": 2
    },
    {
      "avg_tile_size": 20.0,
      "bbox": [
        135.0,
        -40.9798980696,
        180.0,
        0.0
      ],
      "max_tile_size": 20,
      "min_tile_size": 20,
      "tile_count": 1,
      "zoom": 3
    },
    {
      "avg_tile_size": 20.0,
      "bbox": [
        -22.5,
        0.0,
        0.0,
        21.9430455334
      ],
      "max_tile_size": 20,
      "min_tile_size": 20,
      "tile_count": 1,
      "zoom": 4
    },
    {
      "avg_tile_size": 20.0,
      "bbox": [
        0.0,
        40.9798980696,
        11.25,
        48.9224992637
      ],
      "max_tile_size": 20,
      "min_tile_size": 20,
      "tile_count": 1,
      "zoom": 5
    },
    {
      "avg_tile_size": 20.0,
      "bbox": [
        73.125,
        27.0591257843,
        78.75,
        31.9521622380
      ],
      "max_tile_size": 20,
      "min_tile_size": 20,
      "tile_count": 1,
      "zoom": 6
    }
  ]
}
