e2e-tests/tests/snapshots/martin_cp__raster_metadata.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: metadata
---
agg_tiles_hash = A73112A6754541865CA3937A3C6B6229
bounds = -180,-85.0511,180,85.0511
center = 0,0,0
description = One of the example maps that comes with TileMill - a bright & colorful world map that blends retro and high-tech with its folded paper texture and interactive flag tooltips.
format = png
generator = martin cp v0.0.0
hash_algorithm = md5
legend = <div style="text-align:center;">

<div style="font:12pt/16pt Georgia,serif;">Geography Class</div>
<div style="font:italic 10pt/16pt Georgia,serif;">by MapBox</div>

<img src="data:image/png;base64,iVBORw0KGgo">
</div>
maxzoom = 6
minzoom = 0
name = normalized
version = 1.0.0
