e2e-tests/tests/snapshots/martin_cp__raster_tiles.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: tile_listing(&output).await
---
0/0/0 9 bytes
1/0/0 9 bytes
1/0/1 9 bytes
1/1/0 9 bytes
1/1/1 9 bytes
2/0/0 9 bytes
